--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,8 @@
 # Site settings
-title: YOUR SITE
-email: YOUR-EMAIL@domain.com
+title: UX Compass
+email: chris@northswiss.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  UX Copmpass is a work in progress...
 
 host: "startersite.dev"
 #baseurl: "" # the subpath of your site, e.g. /blog/
