refa(linksList): Add data YAML and add links and loop
- Simple list style

--- a/_config.yml
+++ b/_config.yml
@@ -57,3 +57,4 @@ social:
   linkedin: http://linkedin.com
   twitter: http://twitter.com
   facebook: http://facebook.com
+  github: https://github.com/uxcompass/uxcompass.github.io
