--- a/_data/links.yml
+++ b/_data/links.yml
@@ -6,6 +6,10 @@ UX Resources:
       - Useful
       - UX
       - Other
+      - Alpha
+      - Bravo
+      - Charlie
+      - Delta
   - title: TEST
     url: http://uxdesign.cc
     description: This is the description
